[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/world_map.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Pixellari_12.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/MainScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/beep.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.105882, 0.384314, 0.47451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )
main_screen = ExtResource( 4 )

[node name="WorldMap" type="Sprite" parent="."]
self_modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
position = Vector2( 320, 180 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -33.0
margin_right = 111.0
margin_bottom = 33.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_right = 222.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Artificial Intelligence vs Alien Invaders"

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 222.0
margin_bottom = 66.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 32.0

[node name="StartButton" type="Button" parent="Control/CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 11.0
text = "Start Game"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 210.0
margin_bottom = 26.0
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.0
margin_top = -40.0
margin_right = 73.0

[node name="Label" type="Label" parent="Control/MarginContainer"]
margin_top = 14.0
margin_right = 146.0
margin_bottom = 25.0
text = "A Game Made by Atamert Ölçgen"

[node name="BeepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
